<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:summary="%s"
        android:defaultValue="20"
        android:entries="@array/font_size_entries"
        android:entryValues="@array/font_size_values"
        android:key="@string/key_font"
        android:title="@string/fontLabel" />

    <ListPreference
        android:summary="%s"
        android:defaultValue="0"
        android:entries="@array/speed_entries"
        android:entryValues="@array/speed_values"
        android:key="@string/key_speed"
        android:title="@string/speedLabel" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/key_sort"
        android:title="@string/reverseSortLabel" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/key_start_download"
        android:title="@string/startDownloadLabel" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/key_use_rx"
        android:title="@string/useRX" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/key_use_google_maps"
        android:title="@string/useGoogleMaps" />

</PreferenceScreen>