<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_card_vert"
    android:layout_marginLeft="@dimen/margin_card"
    android:layout_marginRight="@dimen/margin_card"
    android:layout_marginTop="@dimen/margin_card_vert"
    app:cardCornerRadius="@dimen/corner_radius">

    <RelativeLayout
        android:id="@+id/image_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/margin_card_layout">

        <ImageView
            android:contentDescription="@string/image_description"
            android:id="@+id/person_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/person_photo">

            <TextView
                android:id="@+id/lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:textSize="@dimen/text_size_surname"
                android:text="@string/label_surname"/>

            <TextView
                android:id="@+id/firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/lastName"
                android:textSize="@dimen/text_size_card"
                android:text="@string/label_name"/>

            <TextView
                android:id="@+id/secondName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lastName"
                android:layout_marginStart="@dimen/card_patronic_margin"
                android:layout_toEndOf="@+id/firstName"
                android:textSize="@dimen/text_size_card"
                android:text="@string/label_patronymic"/>

            <TextView
                android:id="@+id/person_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/firstName"
                android:textSize="@dimen/text_size_phone"
                android:text="@string/label_phone"/>

        </RelativeLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>
